# Logger

./: .gitignore  CMakeLists.txt  Class_diagram.mdj  log_demo.cpp  logger_example_tfg.cpp
include/: decoration.hpp  greeter.hpp  level.hpp  levelfilter.hpp  logger.hpp  loggerbuilder.hpp
lib/log/: CMakeLists.txt  decoration.cpp  decoration.hpp  log.cpp  log.hpp  logger.cpp  logger.hpp
src/log/: decoration.cpp  greeter.cpp  level.cpp  levelfilter.cpp  logger.cpp  loggerbuilder.cpp
test/: log_test.cpp
test/mocks/: mockdecoration.hpp  mockgreeter.hpp  mocklogger.hpp
